basic file previews in-app
